# MetaMindBot

./: .env  .poetry.lock.kate-swp  config.py  db_helper.py  fsm.py  keyboards.py  main.py  models.py  pyproject.toml  timur_daun.py  zxc.txt
